tests/snapshots/corpus__diagnostic@error_value_as_property_key.kdl.snap
---
source: tests/corpus.rs
expression: "node true=true\n"
---

  × errors occured while parsing

Error: kdl::value_as_property_key (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.UnquotedPropertyName)

  × property keys must be identifiers
   ╭────
 1 │ node true=true
   ·      ────
   ╰────
  help: this is a value; try quoting it

