tests/snapshots/corpus__diagnostic@error_whitespace_after_type.kdl.snap
---
source: tests/corpus.rs
expression: "(interesting) node\nnode (interesting) \"value\"\n"
---

  × errors occured while parsing

Error: kdl::whitespace::after_type (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.InvalidWhitespaceAfterType)

  × type annotations must not be followed by whitespace
   ╭─[1:1]
 1 │ (interesting) node
   ·              ─
 2 │ node (interesting) "value"
   ╰────
  help: remove the whitespace
Error: kdl::whitespace::after_type (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.InvalidWhitespaceAfterType)

  × type annotations must not be followed by whitespace
   ╭─[1:1]
 1 │ (interesting) node
 2 │ node (interesting) "value"
   ·                   ─
   ╰────
  help: remove the whitespace

