tests/snapshots/corpus__diagnostic@error_whitespace_before_property.kdl.snap
---
source: tests/corpus.rs
expression: "node prop1=\"oops\"prop2=\"oops\"\n"
---

  × errors occured while parsing

Error: kdl::whitespace::before_property (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.MissingWhitespaceBeforeProperty)

  × node properties must be separated by whitespace
   ╭────
 1 │ node prop1="oops"prop2="oops"
   ·                  ▲─────┬─────
   ·                  │     ╰── before this property
   ·                  ╰── whitespace needed here
   ╰────

