tests/snapshots/corpus__sexpr@001.kdl.snap
---
source: tests/corpus.rs
expression: "title \"Hello, World\"\n"
---
(document
  (node
    (name title)
    (trivia " ")
    (argument
      (value "Hello, World"))
    (trivia "\n")))
