tests/snapshots/corpus__sexpr@003.kdl.snap
---
source: tests/corpus.rs
expression: "author \"Alex Monad\" email=\"alex@example.com\" active=true\n"
---
(document
  (node
    (name author)
    (trivia " ")
    (argument
      (value "Alex Monad"))
    (trivia " ")
    (property
      (name email)
      (trivia "=")
      (value "alex@example.com"))
    (trivia " ")
    (property
      (name active)
      (trivia "=")
      (value true))
    (trivia "\n")))
